# dr_sasa_n

./: CMakeLists.txt  INSTALL  LICENSE  README.md
doc/: atomdef.txt  dna_heavy_atom_types.xcf
src/: Makefile  NB.cpp  NB.h  NonEffective.cpp  NonEffective.h  PDBparser2.cpp  PDBparser2.h  SearchFunctions.cpp  SearchFunctions.h  SetRadius.cpp  SetRadius.h  ShapeComplementarity.cpp.exclude  ShapeComplementarity.h  SolverDataProcessing.cpp  SolverDataProcessing.h  SurfaceSolverCL.cpp  SurfaceSolverCL.h  SurfaceSolverOnTheFly.cpp  SurfaceSolverOnTheFly.h  atom_struct.cpp  atom_struct.h  compile_static.sh  dr_sasa.cpp  histogram.cpp  histogram.h  residue_struct.cpp  residue_struct.h  stdafx.h
utils/: ABS_TO_REL.py  DrawPoints.r  atom_types.pot  calculate_res.sh  draw_arrow_pymol.py  draw_cgo.py  drsasa_drawinter.py  dump_dict.cpp  gen_rel_table.py  graph_matrix_heatmap.py  matrix_cutter.py  overlap_stat.py  parse_res_interaction.py  vdw.radii  vdw.radii.mol2
utils/nonameres/: GCGCAGCGC.pdb.asa  GCGCCGCGC.pdb.asa  GCGCGGCGC.pdb.asa  GCGCTGCGC.pdb.asa
utils/points/: .thomson1000.xyz.kate-swp  ico1922.xyz  thomson1000.xyz  thomson15092.xyz  thomson2000.xyz  thomson5000.xyz
